/*
 * This file is part of Shiro J Bot.
 * Copyright (C) 2020  Yago Gimenez (KuuHaKu)
 *
 * Shiro J Bot is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Shiro J Bot is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Shiro J Bot.  If not, see <https://www.gnu.org/licenses/>
 */

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'application'
    id "org.springframework.boot" version "2.1.6.RELEASE"
}

application {
    mainClassName = 'com.kuuhaku/Main'
}

group 'com.kuuhaku'
version 'STANDALONE'

sourceCompatibility = 1.11

repositories {
    maven { url "https://jitpack.io" }
    mavenCentral()
    jcenter()
}

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

task copyToLib(type: Copy) {
    into "$buildDir/libs"
    from(configurations.compile)
}
stage.dependsOn(copyToLib)

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.6.RELEASE'
    compile group: 'net.dv8tion', name: 'JDA', version: '4.1.1_140'
    compile group: 'club.minnced', name: 'discord-webhooks', version: '0.1.7'
    compile group: 'com.github.SvenWoltmann', name: 'color-thief-java', version: 'v1.1.2'
    compile group: 'com.enigmabridge', name: 'hibernate4-sqlite-dialect', version: '0.1.2'
    compile group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev212-1.25.0'
    compile group: 'com.rollbar', name: 'rollbar-java', version: '1.+'
    compile group: 'com.github.liheyuan', name: 'simple-emoji-4j', version: 'f26d3b39be'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'org.discordbots', name: 'DBL-Java-Library', version: '2.0.1'
    compile group: 'com.github.gwenn', name: 'sqlite-dialect', version: '0.1.0'
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
    compile('org.springframework.boot:spring-boot-starter-data-jpa') {
        exclude module: 'spring-boot-starter-logging'
    }
    compile('org.springframework.boot:spring-boot-starter-web:2.1.6.RELEASE') {
        exclude module: 'spring-boot-starter-logging'
    }
    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.49'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.2.Final'
    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.1'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.4'
    compile group: 'org.hibernate', name: 'hibernate-c3p0', version: '5.4.2.Final'
    compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.27.2.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.2'
    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '2.11.2'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.1.6.RELEASE'
    compile group: 'org.beanshell', name: 'bsh', version: '2.0b5'
    compile group: 'com.github.ygimenez', name: 'PaginationUtils', version: '1.2.0'
    compile group: 'com.github.treeder', name: 'kitty-cache', version: '065b8d34e2'
    compile group: 'org.python', name: 'jython-standalone', version: '2.7.1'
    compile group: 'com.github.kevinsawicki', name: 'http-request', version: '6.0'
    compile group: 'com.sedmelluq', name: 'jda-nas', version: '1.1.0'
    compile group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.5.1'
    compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
    compile group: 'org.threeten', name: 'threetenbp', version: '1.4.4'
    compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
    compile group: 'org.swinglabs.swingx', name: 'swingx-graphics', version: '1.6.5-1'
    implementation 'com.graphql-java:graphql-java:2019-05-08T02-56-27-cca4316'
}

apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

bootJar {
    baseName = 'gs-rest-service'
    version = '0.1.0'
}

compileJava.options.encoding = 'UTF-8'
